--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "firebase": "^4.1.3",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
+    "react-bootstrap-date-picker": "^5.0.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-bootstrap": "^0.24.2",
